# rsshu

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build-linux.yml  release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  sftp.rs  sync.rs  vault.rs
src/components/: global-context-menu.tsx  sftp-view.tsx  terminal-view.tsx  title-bar.tsx  vault-overlay.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx
src/lib/: privacy-display.ts  terminal-clipboard-bridge.ts
