[package]
name = "rsshu"
version = "0.1.2"
description = "RSSHU - modern SSH/SFTP client"
authors = ["makss"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rsshu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh2 = "0.9.5"
anyhow = "1.0.102"
tempfile = "3.27.0"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
zeroize = { version = "1", features = ["zeroize_derive"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
